Test: Change title to show STAGING indicator

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,7 +49,7 @@
                 
                 <h1 class="logo">
                     <span class="star-icon">✨</span>
-                    <span>AstroWeather</span>
+                    <span>AstroDashboard [STAGING]</span>
                 </h1>
                 <p class="tagline">Clear skies for stargazing tonight?</p>
             </div>
