Changes to icon in title

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -48,8 +48,8 @@
                 </div>
                 
                 <h1 class="logo">
-                    <span class="star-icon">✨</span>
-                    <span>AstroDashboard [STAGING]</span>
+                    <span class="star-icon">🔭</span>
+                    <span>AstroDashboard</span>
                 </h1>
                 <p class="tagline">Clear skies for stargazing tonight?</p>
             </div>
