Update tagline with emojis

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -51,7 +51,7 @@
                     <span class="star-icon">🔭</span>
                     <span>AstroDashboard</span>
                 </h1>
-                <p class="tagline">Clear skies for stargazing tonight?</p>
+                <p class="tagline">🌟 Clear skies for stargazing tonight? 🔭</p>
             </div>
         </header>
 
