--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -119,6 +119,40 @@
             </div>
         </section>
 
+<!-- Dashboard Cards Section -->
+        <div class="dashboard-section" id="dashboardSection" style="display: none;">
+            <div class="cards-container">
+                
+                <!-- Card 1: Tonight's Observing Conditions -->
+                <div class="dashboard-card conditions-card">
+                    <div class="card-header">
+                        <h3>🌙 Tonight's Observing Conditions</h3>
+                        <span class="card-location" id="cardLocation"></span>
+                    </div>
+                    <div class="card-body">
+                        <div class="conditions-timeline" id="conditionsTimeline">
+                            <!-- Will be populated by JavaScript -->
+                            <div class="loading">Loading conditions...</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card 2: Moon Phase -->
+                <div class="dashboard-card moon-card">
+                    <div class="card-header">
+                        <h3>🌙 Moon Phase</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="moon-info" id="moonInfo">
+                            <!-- Will be populated by JavaScript -->
+                            <div class="loading">Loading moon data...</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
         <!-- Loading Indicator -->
         <div id="loadingIndicator" class="loading-indicator hidden">
             <div class="spinner"></div>
@@ -337,5 +371,7 @@
     <script src="/js/auth.js"></script>
     <script src="/js/auth-ui.js"></script>
     <script src="/js/app.js"></script>
+    // Show dashboard cards
+    dashboardCards.show(location, data);
 </body>
 </html>
