--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -370,8 +370,9 @@
     <script src="/js/i18n.js"></script>
     <script src="/js/auth.js"></script>
     <script src="/js/auth-ui.js"></script>
+        // Show dashboard cards
+    <script src="js/dashboard-cards.js"></script>
     <script src="/js/app.js"></script>
-    // Show dashboard cards
-    dashboardCards.show(location, data);
+
 </body>
 </html>
