--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -370,7 +370,7 @@
     <script src="/js/i18n.js"></script>
     <script src="/js/auth.js"></script>
     <script src="/js/auth-ui.js"></script>
-    <script src="js/dashboard-cards.js"></script>
+    <script src="/js/dashboard-cards.js"></script>
     <script src="/js/app.js"></script>
 
 </body>
